<resources>
    <string name="app_name">KotlinMessenger</string>
    <string name="select_photo_button">Select\nPhoto</string>
    <string name="username">Username</string>
    <string name="email_hint_text">Email</string>
    <string name="password_hint_text">Password (6 characters or more)</string>
    <string name="password">Password</string>
    <string name="register_button">Register</string>
    <string name="already_have_account_text">Already have an account?</string>
    <string name="login">Login</string>
    <string name="back_to_registration_text">Back to registration</string>
    <string name="enter_username_email_pw_message">Please enter text in username/email/pw</string>
    <string name="enter_email_pw_message">Please enter text in email/pw</string>
    <string name="username_already_in_use_message">The username is already in use by another account</string>
    <string name="create_user_success">Created user</string>
    <string name="create_user_fail">Failed to create user</string>
    <string name="email_address_badly_message">The email address is badly formatted</string>
    <string name="email_address_already_in_use_message">The email address is already in use by another account</string>
    <string name="password_weak_message">The given password is invalid. Password should be at least 6 characters</string>
    <string name="login_success">Successfully logged in</string>
    <string name="login_fail">Failed to login</string>
    <string name="load_image_fail">Failed to load image</string>
    <string name="load_profile_image_fail">Failed to load profile image</string>
    <string name="myself">Myself</string>
    <string name="user_settings">User settings</string>
    <string name="change">Change</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="change_user_settings_success">Successfully changed user settings</string>
    <string name="change_user_settings_fail">Failed to change user settings</string>
    <string name="new_message">New message</string>
    <string name="new_message_action_bar_title">Select user</string>
    <string name="enter_message_hint_text">Enter message</string>
    <string name="got_a_new_message">↓ Got a new message</string>
    <string name="send_button_text">Send</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
</resources>
