<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.account.RegisterActivity">>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5ecf4"
        tools:context=".activity.account.RegisterActivity">

        <Button
            android:id="@+id/selectphoto_button_register"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_select_photo_button"
            android:text="@string/select_photo_button"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/selectphoto_imageview_register"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:civ_border_color="#001e43"
            app:civ_border_width="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/selectphoto_button_register"
            app:layout_constraintEnd_toEndOf="@+id/selectphoto_button_register"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/selectphoto_button_register"
            app:layout_constraintTop_toTopOf="@+id/selectphoto_button_register"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/username_edittext_regiter"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/username"
            android:background="@drawable/rounded_edittext_register"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectphoto_button_register" />

        <EditText
            android:id="@+id/email_edittext_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/email_hint_text"
            android:background="@drawable/rounded_edittext_register"
            android:ems="10"
            android:hint="@string/email_hint_text"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="@+id/username_edittext_regiter"
            app:layout_constraintStart_toStartOf="@+id/username_edittext_regiter"
            app:layout_constraintTop_toBottomOf="@+id/username_edittext_regiter" />

        <EditText
            android:id="@+id/password_edittext_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_register"
            android:ems="10"
            android:hint="@string/password_hint_text"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="@+id/email_edittext_register"
            app:layout_constraintStart_toStartOf="@+id/email_edittext_register"
            app:layout_constraintTop_toBottomOf="@+id/email_edittext_register" />

        <Button
            android:id="@+id/register_button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button_selector"
            android:enabled="false"
            android:text="@string/register_button"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/password_edittext_register"
            app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext_register" />

        <TextView
            android:id="@+id/already_have_account_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="16dp"
            android:text="@string/already_have_account_text"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/register_button_register"
            app:layout_constraintStart_toStartOf="@+id/register_button_register"
            app:layout_constraintTop_toBottomOf="@+id/register_button_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>