<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.account.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5ecf4">

        <EditText
            android:id="@+id/email_edittext_login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/email_hint_text"
            android:background="@drawable/rounded_edittext_register"
            android:ems="10"
            android:hint="@string/email_hint_text"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password_edittext_login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_register"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="@+id/email_edittext_login"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="@+id/email_edittext_login"
            app:layout_constraintTop_toBottomOf="@+id/email_edittext_login" />

        <Button
            android:id="@+id/login_button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button_selector"
            android:enabled="false"
            android:text="@string/login"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/password_edittext_login"
            app:layout_constraintStart_toStartOf="@+id/password_edittext_login"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext_login" />

        <TextView
            android:id="@+id/back_to_registration_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="16dp"
            android:text="@string/back_to_registration_text"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/login_button_login"
            app:layout_constraintStart_toStartOf="@+id/login_button_login"
            app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>