<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5ecf4">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageview_user_settings"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            app:civ_border_color="#001e43"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username_textview_user_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxWidth="250dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageview_user_settings"
            app:layout_constraintTop_toTopOf="@+id/imageview_user_settings"
            tools:text="Username" />

        <Button
            android:id="@+id/change_button_user_settings"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button_selector"
            android:text="@string/change"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_textview_user_settings" />

        <View
            android:id="@+id/divider_user_settings"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/change_button_user_settings" />

        <Button
            android:id="@+id/cancel_button_user_settings"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_button_selector"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/logout_button_user_settings"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_user_settings" />

        <Button
            android:id="@+id/logout_button_user_settings"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_button_selector"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button_user_settings"
            app:layout_constraintTop_toBottomOf="@+id/divider_user_settings" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>