<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrollview_change_user_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.message.LatestMessagesActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f5ecf4">

            <Button
                android:id="@+id/selectphoto_button_change_user_settings"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:alpha="0"
                android:background="@drawable/rounded_select_photo_button"
                android:text="@string/select_photo_button"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_user_settings_change"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:civ_border_color="#001e43"
                app:civ_border_width="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/selectphoto_button_change_user_settings"
                app:layout_constraintEnd_toEndOf="@+id/selectphoto_button_change_user_settings"
                app:layout_constraintStart_toStartOf="@+id/selectphoto_button_change_user_settings"
                app:layout_constraintTop_toTopOf="@+id/selectphoto_button_change_user_settings" />

            <TextView
                android:id="@+id/textview_username_user_settings_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageview_user_settings_change" />

            <EditText
                android:id="@+id/username_edittext_user_settings_change"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="@string/username"
                android:background="@drawable/rounded_edittext_register"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textview_username_user_settings_change"
                app:layout_constraintTop_toBottomOf="@+id/textview_username_user_settings_change" />

            <TextView
                android:id="@+id/error_message_user_settings_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/username"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_edittext_user_settings_change" />

            <Button
                android:id="@+id/cancel_button_user_settings_change"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/rounded_button_selector"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/change_button_user_settings_change"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/error_message_user_settings_change"
                app:layout_constraintVertical_bias="0.501" />

            <Button
                android:id="@+id/change_button_user_settings_change"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/rounded_button_selector"
                android:enabled="false"
                android:text="@string/change"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancel_button_user_settings_change"
                app:layout_constraintTop_toBottomOf="@+id/error_message_user_settings_change" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>